# vanilla_cmake_dds

./: CMakeLists.txt  README.md  ShapeType_publisher.cxx  ShapeType_subscriber.cxx  USER_QOS_PROFILES.xml  x64Linux4gcc7.3.0.cmake
genCode/: VideoData.cxx  VideoData.hpp  VideoDataPlugin.cxx  VideoDataPlugin.hpp
